tests/baselines/reference/methodChainError.errors.txt
tests/cases/compiler/methodChainError.ts(9,6): error TS2554: Expected 1 arguments, but got 0.


==== tests/cases/compiler/methodChainError.ts (1 errors) ====
    class Builder {
        method(param: string): Builder {
            return this;
        }
    }
    
    new Builder()
        .method("a")
        .method();
         ~~~~~~
!!! error TS2554: Expected 1 arguments, but got 0.
!!! related TS6210 tests/cases/compiler/methodChainError.ts:2:12: An argument for 'param' was not provided.